<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.shulie.instrument.simulator</groupId>
        <artifactId>simulator</artifactId>
        <version>1.0.1</version>
    </parent>
    <artifactId>instrument-simulator-agent</artifactId>
    <name>instrument-simulator-agent ${simulator.minor.version}.${simulator.minor.version}</name>

    <dependencies>
        <dependency>
            <groupId>com.shulie.instrument.simulator</groupId>
            <artifactId>instrument-simulator-messager</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <jdk.source>1.6</jdk.source>
                <jdk.target>1.6</jdk.target>
            </properties>
        </profile>
        <profile>
            <id>jdk9</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.0</version>
                        <configuration>
                            <source>${jdk.version}</source>
                            <target>${jdk.version}</target>
                            <encoding>UTF-8</encoding>
                            <showDeprecation>true</showDeprecation>
                            <fork>true</fork>
                            <debug>true</debug>
                            <optimize>true</optimize>
                            <compilerVersion>${jdk.version}</compilerVersion>
                            <executable>${jdk.home}/bin/javac</executable>
                            <compilerArgs>
                                <arg>--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED</arg>
                                <arg>--add-exports=java.base/jdk.internal.module=ALL-UNNAMED</arg>
                                <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <jdk.version>1.9</jdk.version>
                <!--suppress UnresolvedMavenProperty -->
                <jdk.home>${env.JAVA_9_HOME}</jdk.home>
            </properties>
        </profile>
    </profiles>

    <build>
        <finalName>instrument-simulator-agent-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>UTF-8</encoding>
                    <showDeprecation>true</showDeprecation>
                    <fork>true</fork>
                    <debug>true</debug>
                    <optimize>true</optimize>
                    <compilerVersion>${jdk.version}</compilerVersion>
                    <executable>${jdk.home}/bin/javac</executable>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>attached</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifestEntries>
                                    <Premain-Class>com.shulie.instrument.simulator.agent.AgentLauncher</Premain-Class>
                                    <Agent-Class>com.shulie.instrument.simulator.agent.AgentLauncher</Agent-Class>
                                    <Can-Redefine-Classes>true</Can-Redefine-Classes>
                                    <Can-Retransform-Classes>true</Can-Retransform-Classes>
                                </manifestEntries>
                            </archive>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
